--- a/src/main/resources/lang/messages_ru.properties
+++ b/src/main/resources/lang/messages_ru.properties
@@ -1,5 +1,5 @@
-topbar.main=???????
-topbar.genres=?????
-topbar.news=???????
-topbar.popular=??????????
-topbar.authors=??????
+topbar.main=Главная
+topbar.genres=Жанры
+topbar.news=Новинки
+topbar.popular=Популярное
+topbar.authors=Авторы
