feat: new controller for create book

--- a/src/main/resources/lang/messages_ru.properties
+++ b/src/main/resources/lang/messages_ru.properties
@@ -4,3 +4,4 @@ topbar.news=Новинки
 topbar.popular=Популярное
 topbar.authors=Авторы
 topbar.recent=Недавно просмотренные
+topbar.addBook= ???????? ?????
